--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,11 @@
 {
-  
   "short_name": "Chris Dennis",
   "name": "Portfolio",
   "icons": [
     {
-      "src": "technology.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "logo.svg",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
     }
   ],
   "start_url": ".",
